Fix the vertical alignment when an embedded viewer goes from a bar to a surrounding 'frame'.

--- a/extraterm/resources/themes/default/embedded-frame.scss
+++ b/extraterm/resources/themes/default/embedded-frame.scss
@@ -61,7 +61,11 @@ $ICON_FAIL_COLOR: $brand-text-danger;
   right: pxToRem(0px);
   
   overflow: hidden;
+}
 
+#ID_CONTAINER.CLASS_SUCCEEDED > #ID_OUTPUT_CONTAINER,
+#ID_CONTAINER.CLASS_NEUTRAL > #ID_OUTPUT_CONTAINER,
+#ID_CONTAINER.CLASS_FAILED > #ID_OUTPUT_CONTAINER {
   border-left: $BLOCK_BORDER_LEFT solid rgba(0,0,0,0);
   border-right: $BLOCK_BORDER_RIGHT solid rgba(0,0,0,0);
   
